# ProofOfConceptGame

./: Cargo.toml  README.md
assets/: axe.aseprite  jotun.aseprite  viking.aseprite
assets/characters/: fireball.aseprite  viking.aseprite  wizard.aseprite
assets/effects/: lightning-strike.aseprite
assets/loot/: hammeritem.aseprite  magnet.aseprite  potion.aseprite
assets/ui/: heart.aseprite
src/: cooldown.rs  damage.rs  debug.rs  enemy.rs  items.rs  level_up_plugin.rs  lib.rs  loot.rs  main.rs  map.rs  pause_game_plugin.rs  player.rs  projectiles.rs  rng.rs  start_game.rs  start_menu.rs  ui.rs
src/characters/: components.rs  mod.rs  player.rs
src/characters/bosses/: components.rs  mod.rs
src/characters/bosses/wizard/: fire_volley.rs  ice_spikes.rs  mod.rs
src/characters/systems/: mobs.rs  mod.rs  player.rs
src/loot/: coin.rs  loot.rs  loot_plugin.rs  mod.rs  xp.rs
src/map/: generate_map.rs  map_plugin.rs  mod.rs
src/mechanics/: cooldown.rs  damage.rs  mod.rs  projectiles.rs
src/mechanics/movement/: mod.rs  orbiting.rs
src/mobs/: base.rs  boss.rs  enemy.rs  mod.rs
src/mobs/boss/: fire_volley.rs  ice_spikes.rs  mod.rs
src/prestige/: events.rs  mod.rs  save_game_plugin.rs  stats.rs
src/skills/: mod.rs  skills.rs  skills_tooltips.rs
src/skills/bundles/: orb_jutsu.rs  thors_lightning.rs
src/skills/entities/: mod.rs  orb_jutsu.rs  thors_lightning.rs
src/sound/: events.rs  game_music.rs  mod.rs  sound_plugin.rs  sound_volume.rs
src/sprites/: mod.rs  sprites.rs
src/tools/: damage_tracking.rs  debug.rs  fps_counter_plugin.rs  mod.rs
src/ui/: in_game.rs  level_up_plugin.rs  loss_plugin.rs  mod.rs  pause_game_plugin.rs  settings_plugin.rs  start_menu.rs  upgrade_plugin.rs  win_plguin.rs
src/ui/components/: button.rs
src/ui/effects/: mod.rs
