[package]
name = "test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.3", features = [
    "wav",
    "bevy_state",
    "dynamic_linking",
    "mp3",
] }
rand = { version = "0.8.5", features = ["small_rng"] }
bevy_ecs_tilemap = "0.15"
bevy-inspector-egui = "0.29"
noise = "0.9.0"
winit = "0.30"
image = "0.24"
serde_json = "1.0.140"
serde = "1.0.218"

[profile.dev.package."*"]
opt-level = 3

[lints]
clippy.type_complexity = "allow"
