[package]
name = "test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
bevy = { version = "0.19", features = ["wav", "bevy_state", "mp3"] }

# Update the dependency once this gets merged: https://github.com/StarArawn/bevy_ecs_tilemap/pull/634
bevy_ecs_tilemap = { git = "https://github.com/taboky-dev/bevy_ecs_tilemap", branch = "bevy-0.19" }

bevy-inspector-egui = "0.37"
noise = "0.9.0"
winit = "0.30"
image = "0.24"
serde_json = "1.0.140"
serde = "1.0.218"
